# cold_mailer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.yaml.example
src/cold_mailer/: __init__.py  cli.py  config.py  exceptions.py  mailer.py  rate_limiter.py  recruiter_manager.py  template_engine.py  validators.py
src/cold_mailer/web/: __init__.py  app.py  dependencies.py  schemas.py  sse.py
src/cold_mailer/web/routes/: __init__.py  dashboard.py  email.py  recruiters.py  settings.py  templates.py
src/cold_mailer/web/static/css/: custom.css
src/cold_mailer/web/templates/: base.html  dashboard.html  error.html
src/cold_mailer/web/templates/email/: bulk.html  bulk_result.html  preview.html  progress.html  progress_status.html  result.html  send.html
src/cold_mailer/web/templates/email_templates/: list.html  preview.html
src/cold_mailer/web/templates/recruiters/: detail.html  form.html  list.html
src/cold_mailer/web/templates/settings/: index.html
templates/: cold_mail_ai.j2  default.j2  follow_up.j2  referral.j2
